Add Stamps, Statues and others formulas + some references.

--- a/formulas/Part/Alchemy.tex
+++ b/formulas/Part/Alchemy.tex
@@ -29,7 +29,7 @@
                 \\
                 rng = &\ 250 \times \frac{rngLvl}{100+rngLvl}
             \end{align*}
-
+            \imp{Note:} rng doesn't work at the moment (v1.14). 
         %	Player
         \subsection{Player}
             \begin{align*}
