--- a/formulas/Part/Global.tex
+++ b/formulas/Part/Global.tex
@@ -28,7 +28,11 @@
     \section{Fighting Formulas}
         %	Damage Done
         \subsection{Damage done}
-
+            \begin{align*}
+                {Damage}_{max} =&\
+                \\
+                {Damage}_{min} =&\ {Damage}_{max} \times Mastery
+            \end{align*}
         %	Damage taken per hit
         \subsection{Damage taken per hit}
             \begin{align*}
@@ -42,3 +46,13 @@
                         }
                     \right\rceil
             \end{align*}
+
+        %	AFK damage cap
+        \subsection{AFK damage cap}
+            \imp{TODO}
+        %	Food Consumption
+        \subsection{Food Consumption}
+            \imp{TODO}
+        %	Hourly Kill Cap
+        \subsection{Hourly Kill Cap}
+            \imp{TODO}
