--- a/formulas/Part/Introduction.tex
+++ b/formulas/Part/Introduction.tex
@@ -1,2 +1,10 @@
 \chapter{Introduction}
     \imp{TODO}
+    %------------------------------------------------------------------------------
+    %	Last modifications
+    %------------------------------------------------------------------------------
+    \section{Last modifications}
+        \begin{itemize}
+            \item Add Stamps, Statues and others formulas + some references. 
+            \item Init
+        \end{itemize}
