--- a/formulas/Part/Post_Office.tex
+++ b/formulas/Part/Post_Office.tex
@@ -1,2 +1,18 @@
 \chapter{Post Office}
+    %------------------------------------------------------------------------------
+    %	Simple Shippin Orders
+    %------------------------------------------------------------------------------
+    \section{Simple Shippin Orders}
+    \imp{TODO}
+
+    %------------------------------------------------------------------------------
+    %	Plan-it Express Orders
+    %------------------------------------------------------------------------------
+    \section{Plan-it Express Orders}
+    \imp{TODO}
+
+    %------------------------------------------------------------------------------
+    %	Dudes Next Door
+    %------------------------------------------------------------------------------
+    \section{Dudes Next Door}
     \imp{TODO}
