--- a/formulas/Main.tex
+++ b/formulas/Main.tex
@@ -6,13 +6,18 @@
 \title{
 \vfil
 \begin{center}
-        \textbf{{\color{mygray}\fontsize{32}{60}\selectfont Idleon Formulas}}
+        \textbf{{\color{mygray}\fontsize{32}{60}\selectfont Idleon Formulas v0.0.1}}
+\end{center}
+\begin{center}
+        \textbf{{\color{mygray}\fontsize{16}{60}\selectfont on Legends of Idleon v1.14}}
 \end{center}
 }
 \author{Sacrezar}
 \date{21/05/2021}
 
-
+\advance\cftsecnumwidth 1em\relax
+\advance\cftsubsecindent 1em\relax
+\advance\cftsubsecnumwidth 1em\relax
 \begin{document}
 %------------------------------------------------------------------------------
 %	First Page
