Add cost formula for p2w tab (thx LiuLangZhe)

--- a/formulas/Part/Global.tex
+++ b/formulas/Part/Global.tex
@@ -56,3 +56,7 @@
         %	Hourly Kill Cap
         \subsection{Hourly Kill Cap}
             \imp{TODO}
+
+        %	\% hit by 
+        \subsection{\% chance to hit depending on the accuracy}
+            \imp{TODO}
