--- a/formulas/Part/Introduction.tex
+++ b/formulas/Part/Introduction.tex
@@ -1,10 +1,17 @@
 \chapter{Introduction}
     \imp{TODO}
+
+    %------------------------------------------------------------------------------
+    %	Special thanks
+    %------------------------------------------------------------------------------
+    \section{Special thanks}
+    Xores, LiuLangZhe, Rockangelz and the wiki team as well discord's mods!
     %------------------------------------------------------------------------------
     %	Last modifications
     %------------------------------------------------------------------------------
     \section{Last modifications}
         \begin{itemize}
+            \item Add cost formula for p2w tab (thx LiuLangZhe).
             \item Add Stamps, Statues and others formulas + some references. 
             \item Init
         \end{itemize}
