--- a/formulas/Part/Alchemy.tex
+++ b/formulas/Part/Alchemy.tex
@@ -8,17 +8,46 @@
             \begin{align*}
                 regen_\% = &\ \frac{16 + 0.5 \times (regenLvl-1)}{15} \times regenLvl \times 3
                 \\ 
+                regen_{Cost} = &\ 
+                    \left\lfloor 
+                        2500\left(1.15-\frac{0.117regenLvl}{100+regenLvl}\right)^{regenLvl}
+                    \right\rceil 
+                \\ 
+                \\
                 newBubble = &\ 1 + \frac{newBubbleLvl \times 2.5}{newBubbleLvl + 100}
                 \\
+                newBubble_{Cost} = &\ 
+                    \left\lfloor 
+                        3200\left(1.18-\frac{0.145}{100+newBubbleLvl}\right)^{newBubbleLvl}
+                    \right\rceil 
+                \\
+                \\
                 boostReqLow_\% = &\ 70 \times \frac{boostLvl}{100+boostLvl}
+                \\
+                boostReqLow_{Cost} = &\ 
+                    \left\lfloor 
+                        3750\left(1.2-\frac{0.14boostLvl}{100+boostLvl}\right)^{boostLvl}
+                    \right\rceil 
             \end{align*}
-
+        
+        \newpage
         %	Liquid
         \subsection{Liquid}
             \begin{align*}
                 regen_\% = &\ 400 \times \frac{regenLvl}{100+regenLvl}
+                \\ 
+                regen_{Cost} = &\ 
+                    \left\lfloor 
+                        2500\left(1.19-\frac{0.135regenLvl}{100+regenLvl}\right)^{regenLvl}
+                    \right\rceil 
+                \\ 
                 \\
                 cap = &\ capLvl
+                \\ 
+                cap_{Cost} = &\ 
+                    \left\lfloor 
+                        3500\left(1.2-\frac{0.13capLvl}{100+capLvl}\right)^{capLvl}
+                    \right\rceil 
             \end{align*}
             %	Figure : How much you gain with p2w
             \pic{png}{p2w_regen_formula_graph}{How much regen you gain with p2w}{0.7}{h!}
@@ -26,16 +55,39 @@
         \subsection{Vials}
             \begin{align*}
                 cap =  &\ capLvl
+                \\ 
+                cap_{Cost} = &\ 
+                    \left\lfloor 
+                        10000 \times 2^{capLvl}
+                    \right\rceil 
+                \\ 
                 \\
                 rng = &\ 250 \times \frac{rngLvl}{100+rngLvl}
+                \\ 
+                rng_{Cost} = &\ 
+                    \left\lfloor 
+                        5000 \times 1.25^{rngLvl}
+                    \right\rceil 
+                \\ 
             \end{align*}
             \imp{Note:} rng doesn't work at the moment (v1.14). 
         %	Player
         \subsection{Player}
             \begin{align*}
                 AlchSpeed_\% = &\ 35 \times \frac{AlchSpeedLvl}{100+AlchSpeedLvl} 
+                \\ 
+                AlchSpeed_{Cost} = &\ 
+                    \left\lfloor 
+                        4000\left(1.15-\frac{0.1AlchSpeedLvl}{100+AlchSpeedLvl}^{AlchSpeedLvl}\right) 
+                    \right\rceil 
+                \\ 
                 \\
                 ExtraXP_\% = &\ \frac{11 + 0.5 \times (ExtraXPLvl-1)}{10} \times ExtraXPLvl
+                \\
+                ExtraXP_{Cost} = &\ 
+                \left\lfloor 
+                    6000\left(1.15-\frac{0.09AlchSpeedLvl}{100+AlchSpeedLvl}^{AlchSpeedLvl}\right) 
+                \right\rceil 
             \end{align*}
     %------------------------------------------------------------------------------
     %	Liquid \& Cauldron
