Add cauldron new bubble cost formula + some typo.

--- a/formulas/Main.tex
+++ b/formulas/Main.tex
@@ -45,6 +45,8 @@
 \input{Part/Talents.tex}
 \input{Part/Alchemy.tex}
 \input{Part/Post_Office.tex}
+\input{Part/Construction.tex}
+\input{Part/Worship.tex}
 \input{Part/Others.tex}
 
 \renewcommand\bibname{References} % For modifying the bibliography heading
