--- a/formulas/Part/Introduction.tex
+++ b/formulas/Part/Introduction.tex
@@ -1,17 +1,24 @@
 \chapter{Introduction}
+    \imp{This PDF is interactive if you download it, which might be more comfortable to use.}
+    \newline
+    \newline
     \imp{TODO}
 
     %------------------------------------------------------------------------------
     %	Special thanks
     %------------------------------------------------------------------------------
     \section{Special thanks}
-    Xores, LiuLangZhe, Rockangelz and the wiki team as well discord's mods!
+    Xores, LiuLangZhe, Rockangelz and the wiki team as well as discord's mods!
+    \newline
+    \newline
+    \textit{and LavaFlame2 obviously.}
     %------------------------------------------------------------------------------
     %	Last modifications
     %------------------------------------------------------------------------------
     \section{Last modifications}
         \begin{itemize}
-            \item Add cost formula for p2w tab (thx LiuLangZhe).
-            \item Add Stamps, Statues and others formulas + some references. 
-            \item Init
+            \item[2021/05/25] Add cauldron new bubble cost formula + some typo.
+            \item[2021/05/24] Add cost formula for p2w tab (thx LiuLangZhe).
+            \item[2021/05/23] Add Stamps, Statues and others formulas + some references. 
+            \item[2021/05/22] Init
         \end{itemize}
