--- a/formulas/Part/Talents.tex
+++ b/formulas/Part/Talents.tex
@@ -6,7 +6,7 @@
         %	Stonks!
         \subsection{Stonks!}
         $$
-        Points = 130 \times \frac{x}{x+50}
+        Points = \frac{130 \times x}{x+50}
         $$
         %	Figure : Where to stop leveling up Stonks!
         \pic{png}{stonk_formula_graph}{Where to stop leveling up Stonks!}{0.7}{h!}
