family bonuses; construction and worship xp formulas; some Shaman Skills formulas and graphs; \% chance to hit depending on the accuracy; some star talents; food consumption; Shrine time lvl up; refinery cap/combustion/power

--- a/formulas/Main.tex
+++ b/formulas/Main.tex
@@ -6,10 +6,10 @@
 \title{
 \vfil
 \begin{center}
-        \textbf{{\color{mygray}\fontsize{32}{60}\selectfont Idleon Formulas v0.0.1}}
+        \textbf{{\color{mygray}\fontsize{32}{60}\selectfont Idleon Formulas v0.2}}
 \end{center}
 \begin{center}
-        \textbf{{\color{mygray}\fontsize{16}{60}\selectfont on Legends of Idleon v1.14}}
+        \textbf{{\color{mygray}\fontsize{16}{60}\selectfont on Legends of Idleon v1.21}}
 \end{center}
 }
 \author{Sacrezar}
@@ -42,6 +42,7 @@
 
 \input{Part/Introduction.tex}
 \input{Part/Global.tex}
+\input{Part/Guilds.tex}
 \input{Part/Talents.tex}
 \input{Part/Alchemy.tex}
 \input{Part/Post_Office.tex}
