--- a/formulas/Part/Introduction.tex
+++ b/formulas/Part/Introduction.tex
@@ -2,13 +2,24 @@
     \imp{This PDF is interactive if you download it, which might be more comfortable to use.}
     \newline
     \newline
-    \imp{TODO}
+    \todo{}
+    \newline
+    \newline
+    \information{
+        \begin{itemize}
+            \item \bug{} in game bug note.
+            \item \todo{} todo note, it's for me or for those who want to contribute.
+            \item \information{} information note, general information.
+            \item \imp{Bold red text} important.
+        \end{itemize}
+    }
 
+   
     %------------------------------------------------------------------------------
     %	Special thanks
     %------------------------------------------------------------------------------
     \section{Special thanks}
-    Xores, LiuLangZhe, Rockangelz and the wiki team as well as discord's mods!
+    Xores, LiuLangZhe, Rockangelz, Sonnenlicht and the wiki team as well as discord's mods!
     \newline
     \newline
     \textit{and LavaFlame2 obviously.}
@@ -17,8 +28,19 @@
     %------------------------------------------------------------------------------
     \section{Last modifications}
         \begin{itemize}
+            \item[2021/06/06]- Add:
+                \begin{itemize}
+                    \item family bonuses;
+                    \item construction and worship xp formulas;
+                    \item some Shaman Skills formulas and graphs;
+                    \item \% chance to hit depending on the accuracy;
+                    \item some star talents;
+                    \item food consumption;
+                    \item Shrine time lvl up;
+                    \item refinery cap/combustion/power.
+                \end{itemize} 
             \item[2021/05/25] Add cauldron new bubble cost formula + some typo.
             \item[2021/05/24] Add cost formula for p2w tab (thx LiuLangZhe).
             \item[2021/05/23] Add Stamps, Statues and others formulas + some references. 
-            \item[2021/05/22] Init
+            \item[2021/05/22] Init.
         \end{itemize}
