--- a/formulas/Part/Others.tex
+++ b/formulas/Part/Others.tex
@@ -32,7 +32,7 @@
     \begin{align*}
         baseCost_{Coin} = &\ Price_{base} \times \left(1-\frac{bribe}{100}\right) 
     \end{align*}
-    As of v1.14, the bribe effect is 8\%, not 5\%.
+    \bug{As of v1.14, the bribe effect is 8\%, not 5\%.}
     \begin{align*}
         {Cost}_{Coin} = &\
             \left(1-\frac{vial_\%}{100}\right) \times 
@@ -53,11 +53,12 @@
         \item $lvlRange$ is the number of time you can lvl up a stamp before having to pay using materials.
         \item $i_{8}$ and $i_{10}$ are value you can find in the code or in the wiki, look for data-i in the .stampdiv of the stamp you want to know about.
     \end{itemize}
+    \todo{Skill Stamp cap formula}
 
 %------------------------------------------------------------------------------
 %	Forge
 %------------------------------------------------------------------------------
 \section{Forge}
-    \imp{TODO}
+    \todo{point cost, xp/speed/capa gained per point used}
 
 \newpage
