--- a/formulas/Part/Post_Office.tex
+++ b/formulas/Part/Post_Office.tex
@@ -3,19 +3,19 @@
     %	Simple Shippin Orders
     %------------------------------------------------------------------------------
     \section{Simple Shippin Orders}
-    \imp{TODO}
+        \todo{}
 
     %------------------------------------------------------------------------------
     %	Plan-it Express Orders
     %------------------------------------------------------------------------------
     \section{Plan-it Express Orders}
-    \imp{TODO}
+        \todo{}
 
     %------------------------------------------------------------------------------
     %	Dudes Next Door
     %------------------------------------------------------------------------------
     \section{Dudes Next Door}
-    \imp{TODO}
+        \todo{}
 
     \newpage
     %------------------------------------------------------------------------------
