--- a/formulas/Part/Worship.tex
+++ b/formulas/Part/Worship.tex
@@ -1,1 +1,9 @@
 \chapter{Worship}
+    \todo{
+        \begin{itemize}
+            \item tower cost scalability
+            \item points per mob per wave
+            \item hp scalability if there is any
+            \item soul and xp gained
+        \end{itemize}
+    }
