--- a/formulas/Structure/commands.tex
+++ b/formulas/Structure/commands.tex
@@ -22,7 +22,17 @@
 \newcommand{\imp}[1]{
     \textbf{\textcolor{red}{#1}}
 }
+\newcommand{\bug}[1]{
+    \textcolor{red}{\textbf{BUG NOTE:} #1}
+}
 
+\newcommand{\todo}[1]{
+    \textcolor{purple}{\textbf{TODO: } #1}
+}
+
+\newcommand{\information}[1]{
+    \textcolor{caribbeangreen}{\textbf{Note: }} #1
+}
 %------------------------------------------------------------------------------
 %	AUTRES
 %------------------------------------------------------------------------------
