--- a/formulas/Structure/structure.tex
+++ b/formulas/Structure/structure.tex
@@ -95,6 +95,7 @@ dottedtoc % Dotted lines leading to the page numbers in the table of contents
 %	SECTION STYLE
 %---------------------------------------------------------------------------------------
 \definecolor{blue}{RGB}{0,51,153}
+\definecolor{caribbeangreen}{rgb}{0.0, 0.8, 0.6}
 
 \titleformat{\chapter}{\fontfamily{opensans}\sffamily\huge\bfseries\color{blue}}{\thechapter}{20pt}{\huge}
 \titleformat{\section}{\fontfamily{opensans}\sffamily\Large\bfseries\color{blue}}{\thesection}{1em}{}
